--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-pdo_sqlite": "*",
-        "easycorp/easyadmin-bundle": "dev-master",
+        "easycorp/easyadmin-bundle": "dev-edit_new_entity_popup as dev-master",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/asset": "^4.0",
         "symfony/expression-language": "^4.0",
@@ -60,6 +60,12 @@
     "conflict": {
         "symfony/symfony": "*"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/yceruto/EasyAdminBundle"
+        }
+    ],
     "extra": {
         "symfony": {
             "allow-contrib": true
